--- a/blocks/button/_type/button_type_edit.css
+++ b/blocks/button/_type/button_type_edit.css
@@ -14,13 +14,6 @@
   opacity: 0.6;
 }
 
-@media screen and (max-width: 320px) {
-  .button_type_edit {
-    width: 18px;
-    height: 18px;
-  }
-}
-
 @media screen and (max-width: 650px) {
   .button_type_edit {
     width: 18px;
