--- a/blocks/button/_type/button_type_submit.css
+++ b/blocks/button/_type/button_type_submit.css
@@ -14,7 +14,7 @@
     opacity: 0.8;
   }
   
-  @media screen and (max-width: 320px) {
+  @media screen and (max-width: 550px) {
     .button_type_submit {
       margin: 46px 22px 25px;
       padding: 14px 100px;
