--- a/blocks/popup/__window/popup__window.css
+++ b/blocks/popup/__window/popup__window.css
@@ -14,3 +14,10 @@
       margin: 0 19px;
     }
   }
+
+  @media screen and (max-width: 550px) {
+    .popup__window {
+      width: 282px;
+      margin: auto;
+    }
+  }
