--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -1,27 +1,19 @@
 .profile__job {
   font-weight: 400;
   font-size: 18px;
-  line-height: 1.2;
+  line-height: 22px;
   margin: 0;
   padding-top: 16px;
-  max-width: 373px;
+  max-width: 415px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
 }
 
-@media screen and (max-width: 320px) {
-  .profile__job {
-    font-size: 14px;
-    padding-top: 14px;
-    line-height: 1.21;
-  }
-}
-
 @media screen and (max-width: 650px) {
   .profile__job {
     font-size: 14px;
-    line-height: 1.21;
+    line-height: 17px;
     margin-top: 14px;
   }
 }
