--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,7 +1,7 @@
 .profile__name {
     font-weight: 500;
     font-size: 42px;
-    line-height: 1.14;
+    line-height: 48px;
     margin: 0 18px 0 0;
     max-width: 373px;
     text-overflow: ellipsis;
@@ -9,20 +9,11 @@
     overflow: hidden;
   }
   
-  @media screen and (max-width: 320px) {
-    .profile__name {
-    font-size: 22px;
-    line-height: 1.21;
-    margin: 0 10px 0 0;
-    padding-right: 0;
-    }
-  }
-
-
   @media screen and (max-width: 650px) {
     .profile__name {
       font-size: 22px;
-      line-height: 1.21;
+      line-height: 27px;
       margin: 0 10px 0 0;
+      max-width: 90%;
     }
   }
